# conformal-adaptive-control

./: .gitignore  adaptation.py  concurrent_learning.py  controller copy.py  controller.py  design_gains.py  high_level_objective.py  main.py  observer.py  ocp.py  plant.py  pyproject.toml  robot.py  save_plots.py  sensor.py  simulation.ipynb  ssml.py  test_ocp.py
paper/: biblio.bib  main.tex  preamble.tex
