[project]
name = "conformal-adaptive-control"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cvxpy>=1.8.1",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "osqp>=1.1.1",
    "qpsolvers>=4.11.0",
    "scipy>=1.17.1",
]
